--- a/SpringBoot-Thymeleaf/src/main/resources/templates/index.html
+++ b/SpringBoot-Thymeleaf/src/main/resources/templates/index.html
@@ -15,6 +15,9 @@ Welcome <span th:text="${name}"></span>
 <h1 th:inline="text">Hello.v.2</h1>
 <p th:text="${hello}"></p>
 
+姓名：<span th:text="${user.name}"></span><br/>
+年龄：<span th:text="${user.age}"></span>
+
 </body>
 </html>
 
